test/MC/SVE/regression-tests/negative_tests/sve-dup-007.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS32DupI
// Immediate not compatible with encode/decode function.
dup z3.s, #128
// CHECK: error: immediate must be an integer in range [-128, 127] or a multiple of 256 in range [-32768, 32512]
